<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:theme="@style/AppTheme"
    android:background="@color/white"
    android:padding="16dp">

    <EditText
        android:id="@+id/edit_text_current_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/input_current_password"
        android:inputType="textPassword"
        android:maxLines="1"
        android:layout_marginBottom="8dp" />

    <EditText
        android:id="@+id/edit_text_new_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/input_new_password"
        android:inputType="textPassword"
        android:maxLines="1"
        android:layout_marginBottom="8dp" />

    <EditText
        android:id="@+id/edit_text_confirm_new_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/confirm_new_password_hint"
        android:inputType="textPassword"
        android:maxLines="1"
        android:layout_marginBottom="16dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="end">

        <Button
            android:id="@+id/button_cancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cancel"
            android:layout_marginEnd="8dp" />

        <Button
            android:id="@+id/button_confirm"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/confirm" />

    </LinearLayout>
</LinearLayout>