<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    android:theme="@style/AppTheme"
    android:background="@color/white">

    <!-- 群組名稱輸入框 -->
    <EditText
        android:id="@+id/editTextGroupName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/please_enter_group_name"
        android:padding="8dp" />

    <!-- 搜索成員區域 -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="8dp">

        <EditText
            android:id="@+id/editTextMemberId"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:hint="@string/enter_member_id_hint"
            android:padding="8dp" />

        <Button
            android:id="@+id/buttonSearchMember"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/search_button_text"
            android:backgroundTint="@color/mainbutton"
            android:textColor="#000000"/>

    </LinearLayout>

    <!-- 成員列表標題 -->
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/searched_members_info"
        android:textSize="18sp"
        android:padding="8dp" />

    <!-- 成員選擇列表 -->
    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/memberRecyclerView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:layout_marginBottom="8dp" />

    <!-- 創建群組按鈕 -->
    <Button
        android:id="@+id/buttonCreateGroup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/create_group"
        android:backgroundTint="@color/mainbutton"
        android:textColor="#000000"/>

</LinearLayout>