<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:theme="@style/AppTheme"
    android:background="@color/white"
    android:padding="16dp">

    <!-- 創建群組者的頭貼 -->
    <ImageView
        android:id="@+id/group_creator_avatar"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:contentDescription="@string/group_creator_avatar_desc"
        android:src="@drawable/icon_logo1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent" />

    <!-- 群組名稱 -->

    <!-- 群組訊息 -->
    <TextView
        android:id="@+id/group_name"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="8dp"
        android:contentDescription="@string/group_name_desc"
        android:ellipsize="end"
        android:maxLines="1"
        android:text="@string/group_name_desc"
        android:textColor="#000000"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toStartOf="@id/last_message_time"
        app:layout_constraintHorizontal_bias="0.004"
        app:layout_constraintStart_toEndOf="@id/group_creator_avatar"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/group_message"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="8dp"
        android:maxLines="1"
        android:ellipsize="end"
        android:text="@string/default_latest_message"
        android:textColor="#888888"
        android:textSize="14sp"
        android:contentDescription="@string/latest_message_desc"
        app:layout_constraintStart_toEndOf="@id/group_creator_avatar"
        app:layout_constraintEnd_toStartOf="@id/last_message_time"
        app:layout_constraintTop_toBottomOf="@id/group_name"
        app:layout_constraintBottom_toBottomOf="parent" />

    <!-- 最後一則訊息的時間 -->
    <TextView
        android:id="@+id/last_message_time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="12:00"
        android:textColor="#888888"
        android:textSize="12sp"
        android:contentDescription="@string/last_message_time_desc"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>